--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complete Responsive Food Website Design</title>
+    <title>Pedidos de alimentos</title>
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
@@ -644,7 +644,7 @@
 
     </div>
 
-    <div class="credit"> copyright @ 20223 by <span>Kamaal Restorent </span> </div>
+    <div class="credit"> copyright @ 2024 by <span>Jorge Chávez Huincho </span> </div>
 
 </section>
 
